Compact UI for Energy Systems tab is done. MVT is scaled down and shifted, but now I need to change all of the views to actually use the MVT for scaling their images. But then things will get complicated because it relied on referencing spots on the image so things lined up and energy chunks would travel along the correct-looking path.

--- a/energy-forms-and-changes/src/styles/sim.less
+++ b/energy-forms-and-changes/src/styles/sim.less
@@ -34,11 +34,17 @@
 
 .energy-symbols-checkbox-panel {
     position: absolute;
-    right: 15px;
-    top: 15px;
+    right: @panel-margin;
+    top: @panel-margin;
     padding: @side-panels-padding;
+    width: @element-symbols-checkbox-panel-width;
     color: #000;
     .gray-panel();
+
+    @media screen and (max-height: @short-window) {
+        top: @short-screen-panel-margin;
+        right: @short-screen-panel-margin;
+    }
 
     .energy-symbols-checkbox + label {
         opacity: 0.6;
@@ -52,7 +58,7 @@
         float: right;
         margin-top: -4px;
         margin-bottom: -2px;
-        margin-left: 6px;
+        margin-left: 13px;
     }
 }
 
