--- a/energy-forms-and-changes/src/styles/variables.less
+++ b/energy-forms-and-changes/src/styles/variables.less
@@ -3,6 +3,12 @@
 @import "../../../common/styles/variables.less";
 
 @side-panels-padding: 15px;
+@panel-margin: 15px;
+@short-screen-panel-margin: 13px;
 
 @scene-height: 580px;
 @short-scene-height: 401px;
+
+@element-row-margin: 10px;
+
+@element-symbols-checkbox-panel-width: 180px;
